fotos corregidas, api google fonts iconos implementado , favicon cambiado, perfil desplegable actualizado

--- a/frontend/app-tfg/src/index.css
+++ b/frontend/app-tfg/src/index.css
@@ -3,3 +3,17 @@
 body {
   @apply bg-gray-900 text-white;
 }
+
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-image: repeating-linear-gradient(135deg, #2d3748 0px, #2d3748 2px, transparent 2px, transparent 40px);
+  opacity: 0.20;
+  z-index: -1;
+  pointer-events: none;
+}
